test/arrays/bradc/localSlices/localsliceOOB2.good
localsliceOOB2.chpl:3: error: halt reached - array slice out of bounds in dimension 1: 1..12 by 2
